{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 98,
  "lineage": "6c9ac28b-7fee-f8ff-c8d2-59defbcd8392",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c12c07299f06e6cb",
            "arn": "arn:aws:ec2:ap-south-1:412381738401:elastic-ip/eipalloc-0c12c07299f06e6cb",
            "association_id": "eipassoc-0350f5f29b745ea66",
            "domain": "vpc",
            "id": "eipalloc-0c12c07299f06e6cb",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07f3f87e5b616f60f",
            "private_dns": "ip-10-0-3-114.ap-south-1.compute.internal",
            "private_ip": "10.0.3.114",
            "public_dns": "ec2-13-200-241-113.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.241.113",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ff5003538b60d5ec",
            "arn": "arn:aws:ec2:ap-south-1:412381738401:instance/i-03f3dbe4ee518f545",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f3dbe4ee518f545",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dbcd0ff4cb9d8d08"
              }
            ],
            "primary_network_interface_id": "eni-0dbcd0ff4cb9d8d08",
            "private_dns": "ip-10-0-1-71.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.71",
            "public_ip": "13.127.191.246",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0baa7e1d4118da380",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0acab2cd914b4b69a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0798d2a7e9b6f92b3",
            "tags": {
              "Name": "HelloWorld"
            },
            "tags_all": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0acab2cd914b4b69a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "i-03f3dbe4ee518f545",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.pub_subnet-01",
            "aws_vpc.vpc-02",
            "data.aws_ami.my_ami_Amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:internet-gateway/igw-02810b7f7be630541",
            "id": "igw-02810b7f7be630541",
            "owner_id": "412381738401",
            "region": "ap-south-1",
            "tags": {
              "Name": "demo-02-igw-02"
            },
            "tags_all": {
              "Name": "demo-02-igw-02"
            },
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c12c07299f06e6cb",
            "association_id": "eipassoc-0350f5f29b745ea66",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0bdd67080ac30d222",
            "network_interface_id": "eni-07f3f87e5b616f60f",
            "private_ip": "10.0.3.114",
            "public_ip": "13.200.241.113",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f0cf39d09d74b4c4",
            "tags": {
              "Name": "demo-02-ngw-02"
            },
            "tags_all": {
              "Name": "demo-02-ngw-02"
            },
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.my_eip_02",
            "aws_subnet.pvt_subnet-03",
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:network-acl/acl-0296ba3539248e3fc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/00",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0296ba3539248e3fc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "412381738401",
            "region": "ap-south-1",
            "subnet_ids": [],
            "tags": {
              "Name": "nacl-02"
            },
            "tags_all": {
              "Name": "nacl-02"
            },
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:route-table/rtb-09542625cf7eb7e3e",
            "id": "rtb-09542625cf7eb7e3e",
            "owner_id": "412381738401",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bdd67080ac30d222",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-02-private-rt"
            },
            "tags_all": {
              "Name": "demo-02-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "rtb-09542625cf7eb7e3e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.my_eip_02",
            "aws_nat_gateway.ngw-02",
            "aws_subnet.pvt_subnet-03",
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:route-table/rtb-0b184f901e063bd01",
            "id": "rtb-0b184f901e063bd01",
            "owner_id": "412381738401",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02810b7f7be630541",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-02-public-rt"
            },
            "tags_all": {
              "Name": "demo-02-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "rtb-0b184f901e063bd01",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw-02",
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd3331cc628fc071",
            "region": "ap-south-1",
            "route_table_id": "rtb-09542625cf7eb7e3e",
            "subnet_id": "subnet-0f0cf39d09d74b4c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.my_eip_02",
            "aws_nat_gateway.ngw-02",
            "aws_route_table.private_rt",
            "aws_subnet.pvt_subnet-03",
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcef65d9c9f71421",
            "region": "ap-south-1",
            "route_table_id": "rtb-09542625cf7eb7e3e",
            "subnet_id": "subnet-0086ba72c56ade123"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.my_eip_02",
            "aws_nat_gateway.ngw-02",
            "aws_route_table.private_rt",
            "aws_subnet.pvt_subnet-03",
            "aws_subnet.pvt_subnet-04",
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f2821d0757e30b1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b184f901e063bd01",
            "subnet_id": "subnet-0798d2a7e9b6f92b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-02",
            "aws_route_table.public-rt",
            "aws_subnet.pub_subnet-01",
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004bd47238e5274d0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b184f901e063bd01",
            "subnet_id": "subnet-00603996ffd30bb75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-02",
            "aws_route_table.public-rt",
            "aws_subnet.pub_subnet-02",
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:security-group/sg-0acab2cd914b4b69a",
            "description": "Allow Port 80 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acab2cd914b4b69a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_ssh",
            "name_prefix": "",
            "owner_id": "412381738401",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "sg-0acab2cd914b4b69a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:subnet/subnet-0798d2a7e9b6f92b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0798d2a7e9b6f92b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412381738401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Pub-subnet-1a"
            },
            "tags_all": {
              "Name": "Pub-subnet-1a"
            },
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "subnet-0798d2a7e9b6f92b3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:subnet/subnet-00603996ffd30bb75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00603996ffd30bb75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412381738401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Pub-subnet-2b"
            },
            "tags_all": {
              "Name": "Pub-subnet-2b"
            },
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "subnet-00603996ffd30bb75",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:subnet/subnet-0f0cf39d09d74b4c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0cf39d09d74b4c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412381738401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Pvt-subnet-3a"
            },
            "tags_all": {
              "Name": "Pvt-subnet-3a"
            },
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "subnet-0f0cf39d09d74b4c4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:subnet/subnet-0086ba72c56ade123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0086ba72c56ade123",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412381738401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Pvt-subnet-4b"
            },
            "tags_all": {
              "Name": "Pvt-subnet-4b"
            },
            "vpc_id": "vpc-00e855310f46caa17"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "subnet-0086ba72c56ade123",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412381738401:vpc/vpc-00e855310f46caa17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08222a60b1b097934",
            "default_route_table_id": "rtb-02ccf1babecdd787b",
            "default_security_group_id": "sg-0080de8d54d55c21b",
            "dhcp_options_id": "dopt-09bb6c186cc3e64d6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e855310f46caa17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ccf1babecdd787b",
            "owner_id": "412381738401",
            "region": "ap-south-1",
            "tags": {
              "Name": "demo-02-vpc-02"
            },
            "tags_all": {
              "Name": "demo-02-vpc-02"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412381738401",
            "id": "vpc-00e855310f46caa17",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}